# browser-use-rs

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml  upstream-drift.yml
crates/browser-use-cdp/: Cargo.toml
crates/browser-use-cdp/src/: browser_session.rs  browser_session_impl.rs  cloud.rs  dom.rs  dom_session.rs  input.rs  lib.rs  lifecycle.rs  policy.rs  profile.rs  recording.rs  runtime.rs  session.rs  session_helpers.rs  session_types.rs  storage.rs  target.rs  tests.rs  transport.rs  types.rs  watchdog.rs
crates/browser-use-cdp/src/dom/: scripts.rs
crates/browser-use-cdp/src/dom/scripts/: interactive_elements.rs
crates/browser-use-cdp/src/profile/: launch.rs
crates/browser-use-cdp/src/recording/: har.rs
crates/browser-use-cdp/src/watchdog/: downloads.rs
crates/browser-use-cli/: Cargo.toml
crates/browser-use-cli/src/: llm_config.rs  main.rs  mcp_daemon.rs  session.rs  tests.rs
crates/browser-use-conformance/: Cargo.toml
crates/browser-use-conformance/fixtures/: agent_checkpoint_replay.json  agent_history_replay_recapture_run.json  agent_history_replay_run.json  agent_history_replay_run_schema.json  agent_output_schema.json  browser_action_schema.json  browser_lifecycle_adapter_events.json  browser_lifecycle_events.json  browser_lifecycle_exception_events.json  browser_state_summary_schema.json  eval_tree_state.txt  frame_shadow_state.json  long_task_agent_replay.json  managed_file_system_replay.json  mixed_interactive_state.json  openai_agent_output_schema.json  rich_browser_state_summary.json  simple_action_results.json  simple_action_sequence.json  simple_agent_history.json  simple_interactive_state.json
crates/browser-use-conformance/src/: fixtures.rs  lib.rs  tests.rs
crates/browser-use-core/: Cargo.toml
crates/browser-use-core/src/: agent.rs  executor.rs  file_system.rs  history.rs  lib.rs  prompt.rs  settings.rs  tests.rs  urls.rs  usage.rs
crates/browser-use-core/src/agent/: artifacts.rs  callbacks.rs  llm.rs  run_state.rs  types.rs
crates/browser-use-core/src/executor/: extract.rs  files.rs  page_results.rs
crates/browser-use-core/src/file_system/: documents.rs  paths.rs
crates/browser-use-core/src/prompt/: history.rs  images.rs  schema.rs
crates/browser-use-dom/: Cargo.toml
crates/browser-use-dom/src/: eval.rs  interacted.rs  lib.rs  render.rs  state.rs  tests.rs  types.rs
crates/browser-use-llm/: Cargo.toml
crates/browser-use-llm/src/: anthropic.rs  common.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  tests.rs  types.rs
crates/browser-use-mcp/: Cargo.toml
crates/browser-use-mcp/src/: lib.rs
crates/browser-use-tools/: Cargo.toml
crates/browser-use-tools/src/: lib.rs
docs/: ARCHITECTURE.md  CLI.md  CODEBASE_GUIDE.md  CONFORMANCE.md  DAEMON_SUPERVISION.md  INSTALL.md  MCP.md  RELEASE.md  RELEASE_AUTOMATION.md  ROADMAP.md  UPSTREAM_SYNC.md
packaging/homebrew/: README.md  browser-use-rs.rb.template  publish-tap.sh
packaging/launchd/: com.evalops.browser-use-rs.plist
packaging/systemd/: browser-use-rs.service
scripts/: openai_mcp_smoke.py  release-version.py  test_openai_mcp_smoke.py  upstream-drift.py
