[workspace]
members = [
    "crates/browser-use-cdp",
    "crates/browser-use-cli",
    "crates/browser-use-conformance",
    "crates/browser-use-core",
    "crates/browser-use-dom",
    "crates/browser-use-llm",
    "crates/browser-use-mcp",
    "crates/browser-use-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/evalops/browser-use-rs"
rust-version = "1.85"
authors = ["EvalOps"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive", "env"] }
schemars = { version = "0.8.22", features = ["derive", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
