[workspace]
members = [
    "crates/browser-use-cdp",
    "crates/browser-use-cli",
    "crates/browser-use-conformance",
    "crates/browser-use-core",
    "crates/browser-use-dom",
    "crates/browser-use-llm",
    "crates/browser-use-mcp",
    "crates/browser-use-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/evalops/browser-use-rs"
rust-version = "1.85"
authors = ["EvalOps"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11.1"
schemars = { version = "0.8.22", features = ["derive", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
