[workspace]
members = [
    "crates/browser-use-cdp",
    "crates/browser-use-cli",
    "crates/browser-use-conformance",
    "crates/browser-use-core",
    "crates/browser-use-dom",
    "crates/browser-use-llm",
    "crates/browser-use-mcp",
    "crates/browser-use-tools",
]
resolver = "2"

[workspace.package]
version = "0.33.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/evalops/browser-use-rs"
rust-version = "1.85"
authors = ["EvalOps"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
csv = "1.3.1"
futures-util = "0.3.31"
data-encoding = "2.11.0"
encoding_rs = "0.8.35"
image = { version = "0.25.6", default-features = false, features = ["gif", "png"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
pdf-extract = "0.10.0"
percent-encoding = "2.3.2"
quick-xml = "0.40.1"
regex = "1.11.1"
ring = "0.17.14"
schemars = { version = "0.8.22", features = ["derive", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tracing = "0.1.41"
unicode-normalization = "0.1.25"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2"] }
