[package]
name = "browser-use-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
browser-use-dom = { path = "../browser-use-dom" }
futures-util.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
unicode-normalization.workspace = true
url.workspace = true
