[package]
name = "browser-use-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
browser-use-core = { path = "../browser-use-core" }
clap.workspace = true

[[bin]]
name = "browser-use-rs"
path = "src/main.rs"
