[package]
name = "browser-use-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
browser-use-cdp = { path = "../browser-use-cdp" }
browser-use-core = { path = "../browser-use-core" }
browser-use-dom = { path = "../browser-use-dom" }
browser-use-llm = { path = "../browser-use-llm" }
browser-use-tools = { path = "../browser-use-tools" }
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "browser-use-rs"
path = "src/main.rs"
