[package]
name = "browser-use-conformance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
browser-use-dom = { path = "../browser-use-dom" }
browser-use-tools = { path = "../browser-use-tools" }
schemars.workspace = true
serde_json.workspace = true
