[package]
name = "browser-use-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
browser-use-dom = { path = "../browser-use-dom" }
browser-use-tools = { path = "../browser-use-tools" }
schemars.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
browser-use-cdp = { path = "../browser-use-cdp" }
browser-use-core = { path = "../browser-use-core" }
tempfile.workspace = true
tokio.workspace = true
