[package]
name = "browser-use-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
browser-use-cdp = { path = "../browser-use-cdp" }
browser-use-dom = { path = "../browser-use-dom" }
browser-use-llm = { path = "../browser-use-llm" }
browser-use-tools = { path = "../browser-use-tools" }
async-trait.workspace = true
schemars.workspace = true
serde.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
