[package]
name = "browser-use-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
browser-use-cdp = { path = "../browser-use-cdp" }
browser-use-dom = { path = "../browser-use-dom" }
browser-use-llm = { path = "../browser-use-llm" }
browser-use-tools = { path = "../browser-use-tools" }
async-trait.workspace = true
csv.workspace = true
data-encoding.workspace = true
encoding_rs.workspace = true
image.workspace = true
md-5.workspace = true
pdf-extract.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
