[package]
name = "browser-use-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
browser-use-cdp = { path = "../browser-use-cdp" }
browser-use-core = { path = "../browser-use-core" }
browser-use-dom = { path = "../browser-use-dom" }
browser-use-tools = { path = "../browser-use-tools" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
